--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 html{
-  background-image:url(./img/hatterkep.jfif);
+  animation: backgroundChange 20s infinite;
   background-size:cover;
   background-attachment: fixed;
+}
+
+@keyframes backgroundChange {
+  0% {
+    background-image: url('./img/hatterkep1.png');
+  }
+  50% {
+    background-image: url('./img/hatterkep2.png');
+  }
+  100% {
+    background-image: url('./img/hatterkep1.png');
+  }
 }
