--- a/src/Nav.css
+++ b/src/Nav.css
@@ -5,11 +5,10 @@
 
 /* Navbar */
 .custom-navbar {
-  background: rgba(173, 216, 230, 0.7) url('./img/hatterkep.jfif') no-repeat center center;
+  background: rgba(0, 0, 0, 0.7);
   background-size: cover;
-  background-blend-mode: hard-light;
   color: white;
-  box-shadow: 0px 5px 10px 1px rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 5px 10px 5px rgba(32, 32, 32, 0.8);
   
 }
 
@@ -75,16 +74,14 @@ a:hover {
 }
 
 .btn:hover {
-  background-color: rgb(117, 39, 148);
-  color: white;
   transition: 0.6s;
 }
 
 /* Modal */
 .modal-content {
   border: 2px solid rgba(211, 208, 208, 0.5) !important;
-  background-color: rgba(75, 73, 73, 0.2) !important;
-  box-shadow: 5px 5px 10px 10px rgba(117, 39, 148, 0.5);
+  background-color: rgba(75, 73, 73, 0.4) !important;
+  box-shadow: 5px 5px 10px 10px rgba(19, 18, 18, 0.5);
   user-select: none;
   opacity: 0;
   transform: translateY(+20px);
@@ -102,5 +99,5 @@ a:hover {
 }
 
 .dropdown-item:hover {
-  background-color: rgba(117, 39, 148, 0.2) !important;
+  background-color: rgba(34, 33, 34, 0.2) !important;
 }
