--- a/src/Nav.css
+++ b/src/Nav.css
@@ -24,7 +24,7 @@
 .dropdown-menu {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 0;
-  border-radius: 15px;
+  border-radius: 10px;
   transform: scale(0.95);
   opacity: 0;
   visibility: hidden;
@@ -118,4 +118,24 @@ a:hover {
 
 .dropdown-item:hover {
   background-color: rgba(34, 33, 34, 0.2) !important;
+}
+
+.video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1; /* Videó háttérként */
+}
+
+/* Tartalom stílusa */
+.content {
+  position: relative;
+  z-index: 1;
+  color: white;
+  font-size: 2em;
+  text-align: center;
+  margin-top: 20%;
 }
