--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,127 +1,74 @@
-/* Általános transition minden elemhez */
 * {
   transition: all 0.5s ease;
 }
 
-/* Navbar */
-.custom-navbar {
-  background: rgba(0, 0, 0, 0.7);
-  background-size: cover;
-  color: white;
-  box-shadow: 0px 5px 10px 5px rgba(32, 32, 32, 0.8);
-  
-}
-
-.nav-link {
-  color: white !important;
-}
-
-.nav-link:hover {
-  color: #ddd !important;
-  transition: 0.5s;
-}
-
-.dropdown-menu {
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 0;
-  border-radius: 10px;
-  transform: scale(0.95);
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-}
-
-.dropdown-menu.show {
-  transform: scale(1);
-  opacity: 1;
-  visibility: visible;
-}
-
-.navbar-toggler-icon {
-  background-color: #5d5a5a;
-}
-
-.nav-item {
-  margin-right: 20px;
-  text-align: center;
-}
-
-.d-flex {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.ms-2 {
-  margin-left: 10px;
-}
-
-/* Profilkép */
-#pic {
-  background-color: rgba(255, 255, 255, 0);
-}
-
-#pic img {
-  border-radius: 50%;
-}
-
-img{
+img, a{
   -webkit-user-drag: none;
 }
 
-/* Linkek */
-a {
+/*Oldalra*/
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+  margin: 0;
+}
+
+.box {
+  background-color: rgb(128, 128, 128, 0.8); 
+  padding: 20px;
+  width: 300px;
+  min-width: 100px;
+  max-width: 100%;
   border-radius: 10px;
-  cursor: pointer;
-  transition: background-color 0.5s, color 0.5s;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  color:white;
+  width: 50%;
+  transition: 0.5s;
 }
 
-a:hover {
-  background-color: rgba(196, 196, 196, 0.5);
+/*Keresőhöz*/
+#searchbox {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  width: 300px;
+  min-width: 100px;
+  max-width: 100%;
+  margin-top: 25px;
+  border: 2px solid black;
+  border-radius: 10px;
+  overflow: hidden;
+  overflow-y: scroll;
+  text-align: center;
+  width: 100%;
+  height: 85%;
 }
 
-.btn:hover {
-  transition: 0.6s;
+#searchbox .row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
-/* Modal */
-.modal-content {
-  border: 2px solid rgba(211, 208, 208, 0.5) !important;
-  background-color: rgba(75, 73, 73, 0.8) !important;
-  box-shadow: 5px 5px 10px 10px rgba(19, 18, 18, 0.5);
-  user-select: none;
-  opacity: 0;
-  transform: translateY(+20px);
-  transition: opacity 0.5s ease, transform 0.5s ease;
+#searchbox .row p {
+  flex: 1;
+  margin: 0 10px;
+}
+/*-----*/
+
+#logo:hover{
+  height: 48.5px!important;
 }
 
-.modal.show .modal-content {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.modal p{
-  font-size: 18px;
-}
-
-.modal h2{
-  background-color: rgb(255, 255, 255, 0.15);
-  text-shadow: 3px 3px black;
-  padding: 1px;
-  border-radius: 5px;
-}
-
-/* Dropdown elemek */
-.dropdown-item {
-  transition: background-color 0.5s ease;
-}
-
-.dropdown-item:hover {
-  background-color: rgba(34, 33, 34, 0.2) !important;
+#about{
+  min-width: 75%;
 }
 
 .video-background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -130,12 +77,88 @@ a:hover {
   z-index: -1; /* Videó háttérként */
 }
 
-/* Tartalom stílusa */
-.content {
-  position: relative;
-  z-index: 1;
-  color: white;
-  font-size: 2em;
+.navbar-nav .nav-link {
+  border: 1px solid white;
+  border-radius: 5px;
+  max-width: 150px;
   text-align: center;
-  margin-top: 20%;
+  margin: 0 5px;
+  transition: 0.5s;
+  padding: 5px;
+}
+
+.navbar-nav .nav-link:hover {
+  background-color:rgb(255, 255, 255);
+  color:rgb(0, 0, 0)!important;
+  margin: 0 5px;
+}
+
+.center-logo {
+  position: absolute;
+  left: 50%;
+  bottom: 0%;
+  margin: 1px;
+  transform: translateX(-50%);
+}
+
+@media (max-width: 768px) {
+  .navbar-nav {
+    display: flex;
+    flex-direction:row!important;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-height: 50px;
+  }
+
+  .navbar-nav .nav-link {
+    margin: 5px;
+    max-width: 120px;
+  }
+
+  .center-logo {
+    position: absolute;
+    left: 50%;
+    bottom: 25%;
+    margin: 1px;
+    transform: translateX(-50%);
+    height: 40px !important;
+  }
+
+  #logo:hover{
+    height: 38.5px!important;
+  }
+
+  .navbar-nav.ms-auto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .navbar-nav.ms-auto .nav-item {
+    margin: 5px 0;
+  }
+
+  .navbar-nav.ms-auto .dropstart {
+    margin: 10px 0;
+  }
+
+  .box{
+    margin-top: -20vh;
+    max-height: 60vh;
+    min-width: 40vh;
+    overflow: hidden;
+    overflow-y: scroll;
+  }
+
+  #rightnav{
+    margin-top: 5vh;
+  }
+
+  .d-flex {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
