--- a/src/Nav.css
+++ b/src/Nav.css
@@ -18,7 +18,7 @@ img, a{
 .box {
   background-color: rgb(128, 128, 128, 0.8); 
   padding: 20px;
-  width: 300px;
+  width: 40vw!important;
   min-width: 100px;
   max-width: 100%;
   border-radius: 10px;
@@ -26,7 +26,6 @@ img, a{
   text-align: center;
   color:white;
   width: 50%;
-  transition: 0.5s;
 }
 
 /*Keresőhöz*/
@@ -34,16 +33,12 @@ img, a{
   background-color: white;
   color: black;
   padding: 20px;
-  width: 300px;
-  min-width: 100px;
-  max-width: 100%;
   margin-top: 25px;
   border: 2px solid black;
   border-radius: 10px;
   overflow: hidden;
   overflow-y: scroll;
   text-align: center;
-  width: 100%;
   height: 85%;
 }
 
@@ -53,9 +48,18 @@ img, a{
   margin-bottom: 10px;
 }
 
-#searchbox .row p {
+#searchbox .row p{
+  background-color: rgb(77, 77, 77);
+  color: white;
+  max-width: 150px;
+  overflow: hidden;
   flex: 1;
   margin: 0 10px;
+}
+
+#searchbox .row p:hover{
+  cursor: pointer;
+  font-size: larger;
 }
 /*-----*/
 
@@ -101,7 +105,21 @@ img, a{
   transform: translateX(-50%);
 }
 
-@media (max-width: 768px) {
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  cursor: default;
+}
+
+.dropdown-item:hover{
+  background-color: rgb(77, 77, 77)!important;
+  color: rgb(255, 255, 255)!important;
+}
+
+
+@media (max-width: 992px) {
   .navbar-nav {
     display: flex;
     flex-direction:row!important;
