--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 * {
+  font-family: "Russo One", serif;
+  font-weight: 400;
+  font-style: normal;
   transition: all 0.5s ease;
 }
+
 
 img, a{
   -webkit-user-drag: none;
@@ -26,6 +32,19 @@ img, a{
   text-align: center;
   color:white;
   width: 50%;
+  user-select: none;
+}
+
+.left{
+  float: left;
+  text-align: left;
+  margin: 10px;
+  font-size: 20px;
+  text-decoration: underline;
+}
+
+.left p{
+  margin-bottom: 35px;
 }
 
 /*Keresőhöz*/
@@ -48,18 +67,42 @@ img, a{
   margin-bottom: 10px;
 }
 
-#searchbox .row p{
+#searchbox .row .styled-link {
   background-color: rgb(77, 77, 77);
+  border: 1px solid black;
   color: white;
   max-width: 150px;
   overflow: hidden;
   flex: 1;
   margin: 0 10px;
+  position: relative;
+  padding: 2.5px;
+  transition: 0.5s all;
+  text-decoration: none;
+  text-align: center;
 }
 
-#searchbox .row p:hover{
+#searchbox .row .styled-link::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  transition: all 0.5s ease-in-out;
+}
+
+#searchbox .row .styled-link:hover::before {
+  visibility: visible;
+  width: 100%;
+}
+
+#searchbox .row .styled-link:hover {
   cursor: pointer;
-  font-size: larger;
+  padding: 0.5px;
+  transition: 0.5s all;
 }
 /*-----*/
 
@@ -110,7 +153,7 @@ img, a{
   position: fixed;
   bottom: 0;
   width: 100%;
-  cursor: default;
+  user-select: none;
 }
 
 .dropdown-item:hover{
