--- a/src/Nav.css
+++ b/src/Nav.css
@@ -7,6 +7,9 @@
   transition: all 0.5s ease;
 }
 
+body{
+  padding-bottom: 150px;
+}
 
 img, a{
   -webkit-user-drag: none;
@@ -123,7 +126,6 @@ img, a{
   object-fit: cover;
   z-index: -1; /* Videó háttérként */
 }
-
 .navbar-nav .nav-link {
   border: 1px solid white;
   border-radius: 5px;
@@ -148,7 +150,6 @@ img, a{
   transform: translateX(-50%);
 }
 
-
 .footer {
   position: fixed;
   bottom: 0;
@@ -170,6 +171,9 @@ img, a{
     justify-content: center;
     width: 100%;
     max-height: 50px;
+  }
+  .footer{
+    font-size: small;
   }
 
   .navbar-nav .nav-link {
