--- a/src/Card.css
+++ b/src/Card.css
@@ -1,15 +1,15 @@
 .card-client {
-    background: #555;
+    background-color: rgba(50, 50, 50, 0.8); 
     width: 13rem;
     padding-top: 25px;
     padding-bottom: 25px;
     padding-left: 20px;
     padding-right: 20px;
-    border: 4px solid #fff;
+    border: 1px solid rgb(120, 120, 120);
     box-shadow: 0 6px 10px #212121;
     border-radius: 10px;
     text-align: center;
-    color: #fff;
+    color:azure;
     margin: 10px;
     transition: all 0.3s ease;
   }
@@ -23,7 +23,7 @@
     object-fit: contain;
     width: 5rem;
     height: 5rem;
-    border: 4px solid #fff;
+    border: 2px solid rgb(120, 120, 120);
     border-radius: 999px;
     display: flex;
     justify-content: center;
@@ -33,13 +33,13 @@
   .name-client {
     margin: 0;
     margin-top: 20px;
-    font-weight: 30;
+    font-weight: 300;
     font-size: 15px;
   }
   
   .name-client span {
     display: block;
-    font-weight: 200;
+    font-weight: 300;
     font-size: 14px;
   }
   
@@ -47,9 +47,9 @@
     content: " ";
     display: block;
     width: 100%;
-    height: 2px;
+    height: 1px;
     margin: 20px 0;
-    background: #fff;
+    background: rgb(120, 120, 120);
   }
   
   .social-media a {
