--- a/src/Nav.css
+++ b/src/Nav.css
@@ -39,8 +39,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 90vh;
-  margin: 0;
+  height: 100vh;
+  background-color: rgb(0, 0, 0, 0.75);
 }
 
 .box {
@@ -55,6 +55,7 @@
   text-align: justify;
   color:azure;
   width: 50%;
+  margin-bottom: 70px;
   user-select: none;
   overflow: hidden;
   overflow-y: scroll;
@@ -362,9 +363,6 @@ input:focus{
     margin-top: 15px;
   }
 
-  body{
-    padding-bottom: 15vh;
-  }
 
   .footer{
     font-size: small;
