--- a/src/Card.css
+++ b/src/Card.css
@@ -7,6 +7,7 @@
     padding-bottom: 25px;
     padding-left: 20px;
     padding-right: 20px;
+    height: 250px;
     border: 1px solid rgb(120, 120, 120);
     box-shadow: 0 6px 10px #212121;
     border-radius: 10px;
