--- a/src/Nav.css
+++ b/src/Nav.css
@@ -50,7 +50,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: rgb(0, 0, 0, 0.75);
+  background-color: rgb(0, 0, 0, 0.7);
+  flex: 1;
 }
 
 .box {
@@ -190,17 +191,34 @@ a {
   color: black;
 }
 
+#homecontent{
+  margin-top: 5vh;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  -webkit-user-drag: none;
+  user-select: none;
+}
+
 #download {
+  margin-top: 2.5vh;
+  display: inline-flex;              
+  align-items: center;            
+  justify-content: center;          
+  gap: 5px;                       
+  width: 250px;                    
+  height: 65px;                      
   background-color: rgb(10, 10, 10);
   border-radius: 5px;
   color: azure;
   text-align: center;
-  margin: 0 5px;
   padding: 6.5px;
-  font-size: 14px;
+  font-size: 24px;
   cursor: pointer;
-  width: 40px !important;
+  transition: 0.5s all;
+  text-decoration: none;
 }
+
 
 #download:hover {
   background-color: rgb(255, 255, 255) !important;
@@ -290,13 +308,16 @@ input:focus {
 .footer {
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   font-size: 9px;
   user-select: none;
+  text-align: center;
 }
 
 .footer p {
   color: rgb(170, 170, 170);
+  margin: 5px 0;
 }
 
 .dropdown-item:hover {
@@ -398,14 +419,11 @@ input:focus {
     min-width: 40%;
     max-width: 40%;
   }
-
-  #download {
-    display: none;
-  }
 }
 
 @media (max-width: 1025px) {
   .navbar-nav {
+    margin: 5px;
     display: flex;
     flex-direction: row !important;
     align-items: center;
@@ -447,8 +465,8 @@ input:focus {
   }
 
   #logreg {
-    max-width: 100px;
-    margin: 50px !important;
+    max-width: 90px;
+    margin: auto;
   }
 
   .center-logo {
@@ -530,5 +548,48 @@ input:focus {
 
   .player-name {
     font-size: 8px;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar-nav {
+    flex-direction: row !important;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;;
+    width: 95%;
+  }
+
+  #logreg {
+    display: inline-block;
+    margin: 10px 5px;
+    bottom: 25%;
+    left: 50%;
+    max-width: 100px;
+    transform: translateY(-50%);
+    text-align: center;
+  }
+
+  #dropdownMenuButton{
+    display: inline-block;
+    margin: 10px 5px;
+    bottom: 25%;
+    left: 0%;
+    max-width: 100px;
+    transform: translateY(-50%);
+    text-align: center;
+  }
+
+  .center-logo {
+    display: block;
+    margin: auto;
+    bottom: 0%;
+  }
+
+  #rightnav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
   }
 }
